# Stock-Manager

./: README.md
Uebung_1/: CMakeLists.txt  Charakter.cpp  Charakter.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  Spielablauf.cpp  Spielablauf.h  Spielfeld.cpp  Spielfeld.h  main.cpp
project/: CMakeLists.txt  Hashtable.cpp  Hashtable.h  SingleStock.cpp  SingleStock.h  Stocks.cpp  Stocks.h  main.cpp
